Fixed Quiz/Answers misalignment
- Made numerous tiny adjustments to margins/padding to bring Quiz and Answers into alignment.
- Added display:flex on the .answer <div> in Quiz. This allows the <label> to stretch as it should.

--- a/quizzical/src/index.css
+++ b/quizzical/src/index.css
@@ -62,7 +62,7 @@ p.intro {
 
 /* Quiz Component ------------------------------------------------- */
 form {
-  max-width: 43.75rem; /* 500px */
+  max-width: 43.75rem; /* 700px */
 }
 
 article.question {
@@ -73,7 +73,7 @@ article.question {
 }
 
 legend {
-  margin-bottom: 0.75rem; /* 12px */
+  margin-bottom: 0.6875rem; /* 11px */
   font-weight: 700;
   font-family: Karla, Inter, Arial, sans-serif;
 }
@@ -81,20 +81,22 @@ legend {
 .answer-options {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.8125rem; /* 13px */
 }
 
 .answer {
   position: relative;
+  display: flex;
 }
 
 .answer label {
   min-width: 4.125rem; /* 60px */
   border: 1px solid #4D5B9E;
   border-radius: 8px;
-  padding: 0.25rem 1rem; /* 4px 6px */
+  padding: 0.2rem 1rem; /* 4px 6px */
   font-size: 0.64rem; /* 10.24px */
   font-weight: 500;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -123,12 +125,11 @@ form button {
 
 /* Answers Component ------------------------------------------------- */
 .quiz-answers {
-  width: calc(100vw - 150px);
-  max-width: 31.25rem; /* 500px */
+  max-width: 43.75rem; /* 700px */
 }
 
 h2 {
-  margin-bottom: 0.75rem; /* 12px */
+  margin-bottom: 0.7rem; /* 12px */
   font-size: 1rem;
   font-weight: 700;
   font-family: Karla, Inter, Arial, sans-serif;
@@ -138,12 +139,16 @@ h2 {
   min-width: 4.125rem; /* 60px */
   border: 1px solid #4D5B9E;
   border-radius: 8px;
-  padding: 0.25rem 1rem; /* 4px 6px */
+  padding: 0.25rem 1rem; /* 3.2px 6px */
   font-size: 0.64rem; /* 10.24px */
   font-weight: 500;
   cursor: default;
   opacity: 50%;
   text-align: center;
+}
+
+.revealed-answer p {
+  line-height: 1;
 }
 
 .correct {
